# codex-commit

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
codex_commit/: __init__.py  __main__.py  cli.py  config.py  generator.py
tests/: __init__.py  test_generator.py
